--- a/designer-site/src/pages/Illustration/Illustration.css
+++ b/designer-site/src/pages/Illustration/Illustration.css
@@ -3,7 +3,7 @@
   width: 100%;
   background-color: black;
   position: relative;
-
+display: flex;
 }
 
 .left {
@@ -17,11 +17,14 @@
   left:0;
   background-color: black;
 }
+.right-side{
+  height: 300vh;
+  width: 50%;
+}
 
 .right {
-  width: 50%;
+  width: 100%;
   height: 100vh;
-  border: 1px solid white;
   margin-left: auto;
 }
 .img-div {
