--- a/designer-site/src/pages/Illustration/Illustration.css
+++ b/designer-site/src/pages/Illustration/Illustration.css
@@ -22,10 +22,30 @@ display: flex;
   width: 50%;
 }
 
+
 .right {
   width: 100%;
   height: 100vh;
   margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.right h1{
+  color: #2596be;
+  font-size: 40px;
+  -webkit-transform: scale(1.3,1.8);
+}
+.right h4{
+  color: #2596be;
+  height: 0px;
+}
+.right p{
+  color: #fff;
+  height: 0px;
+  width: 200px;
+  text-align: center;
 }
 .img-div {
   height: 600px;
