--- a/designer-site/src/pages/MainPage/Main.css
+++ b/designer-site/src/pages/MainPage/Main.css
@@ -13,22 +13,33 @@
   color: white;
 }
 
+.navbar svg{
+  margin-top: 2vh;
+  height:6vh;
+  width: 400px;
+}
 
 .lines,
 .liness {
   display: flex;
   justify-content: center;
-  width: 400px;
+  width: 500px;
   margin: auto;
   line-height: 0px;
   height: 100px;
+}
+.liness{
+  margin-top: 20px;
+}
+.lines{
+  margin-top: -20px;
 }
 .lineOne {
   margin-top: 80px;
 }
 .lines h1 {
   color: white;
-  font-size: 100px;
+  font-size: 120px;
   -webkit-transform: scale(1.2, 1);
   z-index: 10;
   position: relative;
@@ -46,7 +57,7 @@
   width: 100vw;
   height: 120vh;
   position: absolute;
-  left: -160px;
+  left: -130px;
   top: -40px;
   z-index: 100;
 }
