--- a/designer-site/src/pages/MainPage/Main.css
+++ b/designer-site/src/pages/MainPage/Main.css
@@ -61,7 +61,7 @@
   top: -40px;
   z-index: 100;
 }
-.handwriting img {
+.handwriting svg {
   width: 100%;
   height: 100%;
   object-fit: contain;
