--- a/designer-site/src/pages/MainPage/Main.css
+++ b/designer-site/src/pages/MainPage/Main.css
@@ -23,13 +23,15 @@
 .liness {
   display: flex;
   justify-content: center;
-  width: 500px;
+  width: 600px;
   margin: auto;
   line-height: 0px;
-  height: 100px;
+  height: 120px;
+  overflow: hidden;
+
 }
 .liness{
-  margin-top: 20px;
+  margin-top: 0px;
 }
 .lines{
   margin-top: -20px;
@@ -37,10 +39,13 @@
 .lineOne {
   margin-top: 80px;
 }
+.lineThree{
+  margin-top: -30px;
+}
 .lines h1 {
   color: white;
   font-size: 120px;
-  -webkit-transform: scale(1.2, 1);
+  -webkit-transform: scale(1.4, 1);
   z-index: 10;
   position: relative;
 }
