--- a/designer-site/src/pages/MainPage/Main.css
+++ b/designer-site/src/pages/MainPage/Main.css
@@ -12,48 +12,63 @@
 .navbar h2 {
   color: white;
 }
+.gray{
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(32, 31, 31);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-left: -100vw;
+  z-index: 1000000;
+  animation: left 0.7s ease-in forwards;
+}
 
-.navbar svg{
+.navbar svg {
   margin-top: 2vh;
-  height:6vh;
-  width: 400px;
+  height: 6vh;
+  width: 500px;
+  z-index: 555555;
 }
 
 .lines,
 .liness {
   display: flex;
   justify-content: center;
-  width: 600px;
+  width: 700px;
   margin: auto;
   line-height: 0px;
-  height: 120px;
+  height: 125px;
   overflow: hidden;
-
 }
-.liness{
+.liness {
   margin-top: 0px;
 }
-.lines{
+.lines {
   margin-top: -20px;
 }
 .lineOne {
-  margin-top: 80px;
+  margin-top: 70px;
 }
-.lineThree{
+.lineThree {
   margin-top: -30px;
 }
+
 .lines h1 {
   color: white;
   font-size: 120px;
-  -webkit-transform: scale(1.4, 1);
+  transform: scale(1.3, 1);
   z-index: 10;
   position: relative;
+  font-weight: 800;
+  font-stretch: expanded;
 }
 .liness p {
   color: white;
-  font-size: 80px;
-  -webkit-transform: scale(1, 1);
-  font-weight: 100;
+  font-size: 120px;
+  -webkit-transform: scale(2, 1);
+  font-weight: 300;
   margin-top: 60px;
   z-index: 100000;
 }
@@ -70,4 +85,11 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+
+@keyframes left {
+  100% {
+    transform: translateX(0vw);
+  }
 }
