--- a/designer-site/src/pages/MainPage/Main.css
+++ b/designer-site/src/pages/MainPage/Main.css
@@ -1,18 +1,12 @@
 .hero-div {
-  height: 100vh;
+  height: 90vh;
   width: 100%;
   background-color: black;
   position: relative;
+  margin-top: -11vh;
 }
-.navbar {
-  height: 10vh;
-  display: flex;
-  justify-content: space-around;
-}
-.navbar h2 {
-  color: white;
-}
-.gray{
+
+.gray {
   width: 100%;
   height: 100vh;
   background-color: rgb(32, 31, 31);
@@ -25,12 +19,6 @@
   animation: left 0.7s ease-in forwards;
 }
 
-.navbar svg {
-  margin-top: 2vh;
-  height: 6vh;
-  width: 500px;
-  z-index: 555555;
-}
 
 .lines,
 .liness {
@@ -49,7 +37,7 @@
   margin-top: -20px;
 }
 .lineOne {
-  margin-top: 70px;
+  padding-top: 20vh;
 }
 .lineThree {
   margin-top: -30px;
@@ -77,8 +65,8 @@
   width: 100vw;
   height: 120vh;
   position: absolute;
-  left: -130px;
-  top: -40px;
+  left: -140px;
+  top: -20px;
   z-index: 100;
 }
 .handwriting svg {
@@ -86,7 +74,6 @@
   height: 100%;
   object-fit: contain;
 }
-
 
 @keyframes left {
   100% {
