--- a/designer-site/src/pages/MainPage/Main.css
+++ b/designer-site/src/pages/MainPage/Main.css
@@ -8,15 +8,16 @@
 
 .gray {
   width: 100%;
-  height: 100vh;
+  height: 101vh;
   background-color: rgb(32, 31, 31);
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
   margin-left: -100vw;
-  z-index: 1000000;
+  z-index: 10000001;
   animation: left 0.7s ease-in forwards;
+  margin-top: 0;
 }
 
 
