--- a/designer-site/src/components/Navbar/Navbar.css
+++ b/designer-site/src/components/Navbar/Navbar.css
@@ -3,6 +3,9 @@
   display: flex;
   justify-content: space-around;
   background-color: transparent;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 .menu,
 .contacts {
