--- a/designer-site/src/pages/MainPage/Main.css
+++ b/designer-site/src/pages/MainPage/Main.css
@@ -19,6 +19,19 @@
   animation: left 0.7s ease-in forwards;
   margin-top: 0;
 }
+.blue {
+  width: 100%;
+  height: 101vh;
+  background-color: #2596be;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-left: -100vw;
+  z-index: 1001;
+  animation: left 0.7s ease-in forwards;
+  margin-top: 0;
+}
 
 
 .lines,
@@ -59,7 +72,7 @@
   -webkit-transform: scale(2, 1);
   font-weight: 300;
   margin-top: 60px;
-  z-index: 100000;
+  z-index: 1000;
 }
 
 .handwriting {
