--- a/designer-site/src/pages/Illustration/Illustration.css
+++ b/designer-site/src/pages/Illustration/Illustration.css
@@ -41,6 +41,10 @@ display: flex;
   font-size: 60px;
   -webkit-transform: scale(1.3,1.8);
 }
+.right h1::selection,.right h4::selection,.right p::selection{
+  background-color: #fff;
+  color: black;
+}
 .right h4{
   color: #2596be;
   height: 0px;
