--- a/designer-site/src/components/Navbar/Navbar.css
+++ b/designer-site/src/components/Navbar/Navbar.css
@@ -6,6 +6,7 @@
   position: sticky;
   top: 0;
   z-index: 1002;
+  animation: down 1s linear 5s forwards;
 }
 .menu,
 .contacts {
@@ -30,4 +31,10 @@
   height: 6vh;
   width: 500px;
   z-index: 555555;
+}
+
+@keyframes down {
+  100% {
+    top: 0;
+  }
 }
