--- a/designer-site/src/pages/Offers/Offers.css
+++ b/designer-site/src/pages/Offers/Offers.css
@@ -1,16 +1,16 @@
 .offers {
-  height: 100vh;
+  height: 120vh;
   width: 100%;
 }
 .up-offer,
 .down-offer {
   width: 100%;
-  height: 50%;
+  height: 45%;
   display: flex;
   flex-direction: row;
-  border: 1px solid red;
   align-items: center;
-  margin-top: 10vh;
+  margin-top: 5vh;
+  
 }
 .up-text {
   width: 70%;
@@ -25,10 +25,14 @@
   margin-top: -60px;
 }
 
+.down-left-offer{
+  width: 50%;
+  display: flex;
+}
 .img-offer {
   height: 200px;
   width: 160;
-  margin-left: 10%;
+  margin-left: 15%;
   overflow: hidden;
 }
 .img-offer:nth-child(2){
@@ -37,4 +41,21 @@
 .img-offer img{
   height: 200px;
   width: 160px;
+}
+.offer-offers{
+  margin: auto;
+}
+.offer-offers hr{
+  margin-top: -20px;
+}
+.hidden{
+  overflow: hidden;
+  height: 60px;
+}
+.hidden h1{
+  transform: scale(1, 1.3);
+font-weight: normal;
+margin-top: 0px;
+height: 50px;
+
 }
