--- a/designer-site/src/pages/MainPage/Main.css
+++ b/designer-site/src/pages/MainPage/Main.css
@@ -25,14 +25,32 @@
   background-color: #2596be;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   position: absolute;
   margin-left: -100vw;
   z-index: 1001;
-  animation: left 0.7s ease-in forwards;
+  animation: left 10s ease-out forwards;
   margin-top: 0;
+  gap: 30px;
 }
-
+.blue-row {
+  height: 90px;
+  overflow: hidden;
+  width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.blue h1 {
+  height: 90px;
+  margin-top: 100%;
+  font-family: 800;
+  font-size: 60px;
+  transform: scale(1.6, 1.8);
+  display: flex;
+  align-items: center;
+}
 
 .lines,
 .liness {
@@ -98,11 +116,11 @@
   object-fit: contain;
 }
 .handwriting path {
-    stroke: #2596be;
-    stroke-width: 25;
-    stroke-dasharray: 13267; 
-     animation: 1.4s handwriting1 linear forwards;
-  }
+  stroke: #2596be;
+  stroke-width: 25;
+  stroke-dasharray: 13267;
+  animation: 1.4s handwriting1 linear forwards;
+}
 
 @keyframes left {
   100% {
