--- a/designer-site/src/pages/Illustration/Illustration.css
+++ b/designer-site/src/pages/Illustration/Illustration.css
@@ -25,7 +25,12 @@ display: flex;
   height: 300vh;
   width: 50%;
 }
-
+.three{
+  height: 300vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
 .right {
   width: 100%;
@@ -38,14 +43,27 @@ display: flex;
 }
 .right h1{
   color: #2596be;
-  font-size: 60px;
+  font-size: 3.75em;
+  -webkit-transform: scale(1.3,1.8);
+}
+.full h1{
+  color: #2596be;
+  font-size: 2em;
   -webkit-transform: scale(1.3,1.8);
 }
 .right h1::selection,.right h4::selection,.right p::selection{
   background-color: #fff;
   color: black;
 }
+.full h1::selection,.full h4::selection,.full p::selection{
+  background-color: #fff;
+  color: black;
+}
 .right h4{
+  color: #2596be;
+  height: 0px;
+}
+.full h4{
   color: #2596be;
   height: 0px;
 }
@@ -55,13 +73,34 @@ display: flex;
   width: 350px;
   text-align: center;
 }
+.full p{
+  color: #fff;
+  height: 0px;
+  width: 350px;
+  text-align: center;
+  width: 80%;
+
+}
 .img-div {
   height: 600px;
-  width: 400px;
+  width: 60%;
   overflow: hidden;
 }
 .img-div img {
   margin-top: 20px;
   width: 100%;
   height: 100%;
+}
+
+.full{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.full img {
+  width: 80%;
+  margin-top: 20vh;
 }
