--- a/designer-site/src/pages/MainPage/Main.css
+++ b/designer-site/src/pages/MainPage/Main.css
@@ -56,7 +56,7 @@
 .liness {
   display: flex;
   justify-content: center;
-  width: 700px;
+  width: 70%;
   margin: auto;
   line-height: 0px;
   height: 125px;
@@ -77,7 +77,7 @@
 
 .lines h1 {
   color: white;
-  font-size: 120px;
+  font-size: 7.5rem;
   transform: scale(1.3, 1);
   z-index: 10;
   position: relative;
@@ -133,5 +133,93 @@
   }
   100% {
     stroke-dashoffset: 0;
+  }
+}
+
+@media (max-width: 760px) {
+  .lines h1,
+  .liness p {
+    font-size: 4rem;
+  }
+  .lines,
+  .liness {
+    height: 65px;
+  }
+  .lineOne {
+    padding-top: 30vh;
+  }
+  .liness p {
+    margin-top: 30px;
+  }
+  .handwriting {
+    width: 120vw;
+    height: 120vh;
+    position: absolute;
+    left: -40px;
+    top: -60px;
+    z-index: 100;
+  }
+  .blue-row {
+    height: 60px;
+  }
+  .blue h1 {
+    height: 50px;
+    font-size: 35px;
+  }
+}
+@media (max-width: 500px) {
+  .lines h1,
+  .liness p {
+    font-size: 3.5rem;
+  }
+  .lines,
+  .liness {
+    height: 70px;
+  }
+  .lineOne {
+    padding-top: 30vh;
+  }
+  .liness p {
+    margin-top: 25px;
+  }
+  .handwriting {
+    width: 120vw;
+    height: 120vh;
+    position: absolute;
+    left: -100px;
+    top: -60px;
+    z-index: 100;
+  }
+  .blue-row{
+    height: 54px;
+
+  }
+  .blue h1 {
+    height: 40px;
+    font-size: 25px;
+  }
+}
+@media (max-width: 400px) {
+  .lines h1,
+  .liness p {
+    font-size: 3rem;
+  }
+  .lines,
+  .liness {
+    height: 60px;
+  }
+  .lineOne {
+    padding-top: 30vh;
+  }
+  .liness p {
+    margin-top: 20px;
+  }
+  .handwriting {
+    width: 120vw;
+    height: 120vh;
+    position: absolute;
+    left: -100px;
+    top: -60px;
+    z-index: 100;
   }
 }
