--- a/designer-site/src/pages/WhatWeDo/WhatWeDo.css
+++ b/designer-site/src/pages/WhatWeDo/WhatWeDo.css
@@ -23,9 +23,7 @@
 .nott {
   transform: scale(1, 1.3);
 }
-.line:hover:not(.nott) {
-  transform: scale(1.3, 1.3);
-}
+
 .line {
   height: 100px;
   display: flex;
@@ -34,89 +32,13 @@
   overflow: hidden;
   width: 100vw;
 }
-.line:hover {
-  background-color: #2596be;
-  justify-content: start;
-}
-.line:hover h1 {
-  font-weight: 900;
-  font-stretch: extra-expanded;
-}
-.line1:hover {
-  width: 217vw;
-}
-.line1:hover h1 {
-  animation: leftone 16s linear infinite, transform 0s;
-}
-.line1:hover p {
-  animation: leftone 16s linear infinite;
-}
-
-.line2:hover {
-  width: 226vw;
-}
-.line2:hover h1 {
-  animation: lefttwo 16s linear infinite;
-}
-.line2:hover p {
-  animation: lefttwo 16s linear infinite;
-}
-
-.line3:hover {
-  width: 210vw;
-}
-.line3:hover h1 {
-  animation: leftthree 16s linear infinite;
-}
-.line3:hover p {
-  animation: leftthree 16s linear infinite;
-}
-
-.line4:hover {
-  width: 210vw;
-}
-.line4:hover h1 {
-  animation: leftfour 16s linear infinite;
-}
-.line4:hover p {
-  animation: leftfour 16s linear infinite;
-}
-
-.line5:hover {
-  width: 210vw;
-}
-.line5:hover h1 {
-  animation: leftfive 16s linear infinite;
-}
-.line5:hover p {
-  animation: leftfive 16s linear infinite;
-}
-
-.line6:hover {
-  width: 206vw;
-}
-.line6:hover h1 {
-  animation: leftsix 16s linear infinite;
-}
-.line6:hover p {
-  animation: leftsix 16s linear infinite;
-}
-.line p {
-  font-size: 80px;
-}
-
-.line:hover p {
-  margin-top: 66px;
-}
-.line:hover p {
-  margin-top: 66px;
-}
 
 .sponsors {
-display: flex;
-flex-wrap: wrap;
-margin: auto;
-justify-content: center;}
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: center;
+}
 
 @keyframes leftfour {
   100% {
@@ -169,9 +91,92 @@ justify-content: center;}
     text-align: center;
   }
   .sponsors {
-padding: auto;
+    padding: auto;
   }
 }
+@media (hover: hover) {
+  .line:hover {
+    background-color: #2596be;
+    justify-content: start;
+  }
+  .line:hover:not(.nott) {
+    transform: scale(1.3, 1.3);
+  }
+  .line:hover h1 {
+    font-weight: 900;
+    font-stretch: extra-expanded;
+  }
+  .line1:hover {
+    width: 217vw;
+  }
+  .line1:hover h1 {
+    animation: leftone 16s linear infinite, transform 0s;
+  }
+  .line1:hover p {
+    animation: leftone 16s linear infinite;
+  }
+
+  .line2:hover {
+    width: 226vw;
+  }
+  .line2:hover h1 {
+    animation: lefttwo 16s linear infinite;
+  }
+  .line2:hover p {
+    animation: lefttwo 16s linear infinite;
+  }
+
+  .line3:hover {
+    width: 210vw;
+  }
+  .line3:hover h1 {
+    animation: leftthree 16s linear infinite;
+  }
+  .line3:hover p {
+    animation: leftthree 16s linear infinite;
+  }
+
+  .line4:hover {
+    width: 210vw;
+  }
+  .line4:hover h1 {
+    animation: leftfour 16s linear infinite;
+  }
+  .line4:hover p {
+    animation: leftfour 16s linear infinite;
+  }
+
+  .line5:hover {
+    width: 210vw;
+  }
+  .line5:hover h1 {
+    animation: leftfive 16s linear infinite;
+  }
+  .line5:hover p {
+    animation: leftfive 16s linear infinite;
+  }
+
+  .line6:hover {
+    width: 206vw;
+  }
+  .line6:hover h1 {
+    animation: leftsix 16s linear infinite;
+  }
+  .line6:hover p {
+    animation: leftsix 16s linear infinite;
+  }
+  .line p {
+    font-size: 80px;
+  }
+
+  .line:hover p {
+    margin-top: 66px;
+  }
+  .line:hover p {
+    margin-top: 66px;
+  }
+}
+
 @media (max-width: 540px) {
   .line h1 {
     font-size: 40px;
@@ -211,7 +216,7 @@ padding: auto;
     width: 80%;
     text-align: center;
   }
-  .sponsors img{
+  .sponsors img {
     width: 150px;
     height: auto;
   }
